# FERIdebugger

./: README.md
project/: Cargo.toml
project/Gui/: Cargo.toml  gui_glade.glade  gui_glade.glade~
project/Gui/src/: main.rs
project/src/: conversion.rs  dynamic_info.rs  header_info.rs  main.rs  process_info.rs  ptrace.rs  registers.rs  static_info.rs  terminal.rs
project/src/program/: mod.rs
project/test/: run  test.c  test.cpp  test_args.cpp  test_input.c  test_loop  test_loop.c
project/test/elf32/: test  test_stripped
project/test/elf64/: alextest  test  test_args  test_input  test_loop  test_stripped
