[package]
name = "project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
goblin = "0.4"
libc = "0.2.107"
sysinfo = "0.20.5"
capstone = "0.10.0"
hex = "0.4"
crossterm = "0.9.3"
backtrace = "0.3"
gimli = "0.26.1"
anyhow = "1.0"
